--- a/.gitignore
+++ b/.gitignore
@@ -19,6 +19,7 @@ yarn-error.log
 /public/fonts/vendor
 /public/vendor
 /public/images/vendor
+/resources/credentials
 /resources/assets/opendialog
 /resources/views/vendor/pingpong
 update-web-chat.sh
