--- a/composer.json
+++ b/composer.json
@@ -9,6 +9,7 @@
         "fideloper/proxy": "^4.2",
         "laravel/framework": "^6.0",
         "laravel/tinker": "^1.0",
+        "maennchen/zipstream-php": "^2.0",
         "opendialogai/core": "dev-develop",
         "opendialogai/webchat": "0.5.5",
         "phalcongelist/php-diff": "^2.0",
