--- a/package.json
+++ b/package.json
@@ -11,43 +11,43 @@
     },
     "devDependencies": {
         "axios": "^0.19",
-        "bootstrap": "^4.3.1",
-        "cross-env": "^5.1",
+        "bootstrap": "^4.4.1",
+        "cross-env": "^7.0.2",
         "jquery": "^3.2",
-        "laravel-mix": "^5.0.1",
+        "laravel-mix": "^5.0.4",
         "lodash": "^4.17.15",
-        "popper.js": "^1.12",
-        "resolve-url-loader": "^3.1.0",
-        "sass": "^1.15.2",
-        "sass-loader": "^7.1.0",
-        "vue": "^2.6.10",
-        "vue-template-compiler": "^2.6.10"
+        "popper.js": "^1.16.1",
+        "resolve-url-loader": "^3.1.1",
+        "sass": "^1.26.5",
+        "sass-loader": "^8.0.2",
+        "vue": "^2.6.11",
+        "vue-template-compiler": "^2.6.11"
     },
     "dependencies": {
-        "@babel/polyfill": "^7.4.4",
-        "@coreui/coreui": "^2.1.12",
+        "@babel/polyfill": "^7.8.7",
+        "@coreui/coreui": "^3.0.0",
         "@coreui/coreui-plugin-chartjs-custom-tooltips": "^1.3.1",
-        "@coreui/icons": "^0.3.0",
-        "@coreui/vue": "^2.1.2",
+        "@coreui/icons": "^1.0.1",
+        "@coreui/vue": "^3.0.8",
         "babel-runtime": "^6.26.0",
         "bcryptjs": "^2.4.3",
-        "bootstrap-vue": "^2.0.0-rc.25",
-        "chart.js": "^2.8.0",
-        "core-js": "^3.1.4",
-        "flag-icon-css": "^3.3.0",
+        "bootstrap-vue": "^2.13.1",
+        "chart.js": "^2.9.3",
+        "core-js": "^3.6.5",
+        "flag-icon-css": "^3.4.6",
         "font-awesome": "^4.7.0",
-        "moment": "^2.24.0",
-        "serialize-javascript": "2.1.1",
-        "shortid": "^2.2.14",
+        "moment": "^2.25.3",
+        "serialize-javascript": "3.0.0",
+        "shortid": "^2.2.15",
         "simple-line-icons": "^2.4.1",
         "vue-chartjs": "^3.4.2",
         "vue-codemirror": "^4.0.6",
-        "vue-color": "^2.7.0",
+        "vue-color": "^2.7.1",
         "vue-cookies": "^1.6.1",
         "vue-plain-slider": "^1.1.1",
         "vue-prismjs": "^1.2.0",
-        "vue-router": "^3.0.6",
-        "vue2-daterange-picker": "^0.4.4",
+        "vue-router": "^3.1.6",
+        "vue2-daterange-picker": "^0.5.0",
         "xmldoc": "^1.1.2"
     }
 }
