sets the docker config to production app env and adds the css and js versions for cache busting

--- a/.env.example.docker
+++ b/.env.example.docker
@@ -1,5 +1,5 @@
 APP_NAME="OpenDialog"
-APP_ENV=local
+APP_ENV=production
 APP_KEY=
 APP_DEBUG=true
 APP_URL=http://localhost
@@ -21,3 +21,6 @@ SESSION_LIFETIME=120
 
 DGRAPH_URL=dgraph-server
 DGRAPH_PORT=8080
+
+JS_VERSIOn=1592565104
+CSS_VERISON=1592565104
