--- a/composer.json
+++ b/composer.json
@@ -7,6 +7,7 @@
         "php": "^7.3.0",
         "doctrine/dbal": "^2.9",
         "fideloper/proxy": "^4.2",
+        "google/cloud-logging": "^1.20",
         "laravel/framework": "^6.0",
         "laravel/tinker": "^1.0",
         "opendialogai/core": "dev-develop",
