--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -120,6 +120,7 @@ jobs:
   docker_build:
     docker:
       - image: circleci/php:7.3.8-node-browsers
+    resource_class: large
     working_directory: ~/repo
     steps:
       - checkout
